@@ -1,5 +1,6 @@
 2010-11-06  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #15587: Bug: htmlspecialchars called twice (Thanks to Mickel Ricky)
 	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)
 
 2010-11-05  Stanislas Rolland  <typo3@sjbr.ca>
